--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1>Library</h1>
         </div>
         <div class="icon-area">
-            <i id="dark-icon" class="fas fa-moon fa-2x"></i>
+            <i id="dark-icon" class="fas fa-moon fa-2x dark-theme-icon"></i>
         </div>
     </header>
 
